# gym-2048

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  log.txt  pyproject.toml
models/evolution/: best_heuristic_weights.json  evolution_history.csv
models/evolution_large/: best_heuristic_weights.json  evolution_history.csv
profiles/: expectimax.prof
scripts/: enjoy.py  evaluate.py  generate_expectimax_data.py  train.py
src/gymnasium_2048/agents/: config.py  evaluation.py  registry.py
src/gymnasium_2048/agents/RLSL/: __init__.py  config.py  replay.py  search.py  train.py
src/gymnasium_2048/agents/RLSL/configs/: train.yaml
src/gymnasium_2048/agents/SL1/: __init__.py  config.py  data.py  encoding.py  loss.py  model.py  policy.py  train.py
src/gymnasium_2048/agents/SL1/configs/: evaluate.yaml  train.yaml
src/gymnasium_2048/agents/evolution/: __init__.py  config.py  evaluation.py  genetic.py  parameters.py  plotting.py  run_evolution.py  run_expectimax_staged.py  specs.py
src/gymnasium_2048/agents/evolution/configs/: train_expectimax.yaml  train_heuristic.yaml
src/gymnasium_2048/agents/expectimax/: __init__.py  board.py  data.py  evaluate_dataset.py  fast_move.py  heuristic.py  policy.py  search.py  symmetry.py
src/gymnasium_2048/agents/heuristic/: __init__.py  features.py  policy.py
src/gymnasium_2048/agents/ntuple/: __init__.py  network.py  policy.py  training.py
src/gymnasium_2048/agents/supervised_cnn/: __init__.py  config.py  data.py  encoding.py  loss.py  model.py  policy.py  train.py
src/gymnasium_2048/agents/supervised_ntuple/: __init__.py  config.py  model.py  policy.py  train.py
src/gymnasium_2048/envs/: twenty_forty_eight.py
tests/: test_agents.py  test_envs.py  test_evolution.py  test_expectimax_afterstate.py  test_expectimax_board_utils.py  test_expectimax_data_generation.py  test_expectimax_dataset_evaluation.py  test_expectimax_dataset_loading.py  test_expectimax_eval_smoke.py  test_expectimax_single_step.py  test_expectimax_symmetry.py  test_heuristic.py  test_rlsl_replay.py  test_rlsl_search.py  test_rlsl_training.py  test_script_integrations.py  test_sl1_encoding.py  test_sl1_loss.py  test_sl1_model_forward.py  test_sl1_policy.py  test_supervised_data.py  test_supervised_encoding.py  test_supervised_loss.py  test_supervised_model_forward.py  test_supervised_ntuple.py  test_supervised_policy.py  test_supervised_train_smoke.py
(+12 files in other folders)
