[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gymnasium_2048"
version = "0.1.0"
authors = [
    { name = "Quentin Deschamps", email = "quentindeschamps18@gmail.com" },
]
description = "A reinforcement learning environment for the 2048 game based on Gymnasium"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["2048", "Reinforcement Learning", "game", "RL", "AI", "gymnasium", "pygame"]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium==1.2.1",
    "matplotlib==3.10.7",
    "numpy>=1.26",
    "pygame==2.6.1",
    "PyYAML>=6.0",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
training = [
    "moviepy==2.2.1",
    "pandas==2.3.3",
    "torch>=2.0",
]
testing = ["pytest"]
quality = ["black[d]", "isort", "pylint"]

[project.urls]
Repository = "https://github.com/Quentin18/gymnasium-2048"

[tool.setuptools.package-data]
"gymnasium_2048.agents.expectimax" = ["configs/*.yaml"]
"gymnasium_2048.agents.evolution" = ["configs/*.yaml"]
"gymnasium_2048.agents.heuristic" = ["configs/*.yaml"]
"gymnasium_2048.agents.ntuple" = ["configs/*.yaml"]
"gymnasium_2048.agents.RLSL" = ["configs/*.yaml"]
"gymnasium_2048.agents.SL1" = ["configs/*.yaml"]
"gymnasium_2048.agents.supervised_cnn" = ["configs/*.yaml"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pep8]
max-line-length = "88"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 88
disable = [
    "attribute-defined-outside-init",
    "duplicate-code",
    "inconsistent-return-statements",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-member",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning:pygame.*:"]
